# AUTOMATION_PROJ_1

./: Command_Line.py  Commands_Bank.py  Commands_Map.py  Config_Manager.py  Folder_Sorter.py  Folder_Sorter_OOP.py  Main.py  README.md  config_file.json  pyproject.toml
src/cryptium_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cryptium_package/: Command_Line.py  Commands_Map.py  Config_Manager.py  Folder_Sorter_OOP.py  Logger_Manager.py  __init__.py  cryptium.py
